# MSD_2024_AP

./: README.md  Untitled
6015/labs/Lab5/: CMakeLists.txt
6015/labs/Lab5/msdscriptl5/: CMakeLists.txt  Makefile  catch.h  cmdline.hpp  expr.cpp  main.cpp  msdscript  msdscript_from_Library  parse.cpp  parse.hpp  parse2.cpp  tests.cpp
6015/msdscript2/: CMakeLists.txt  Env.cpp  Env.h  Makefile  Val.cpp  Val.h  cmdline.cpp  expr.cpp  expr.h  main.cpp  msdscript  parse.cpp  parse.hpp  pointer.h  test_msdscript.cpp  test_msdscript.h  tester  tests.cpp
6015/msdscript2/documentation/html/: class_add-members.html  class_catch_1_1_assertion_handler-members.html  class_catch_1_1_binary_expr-members.html  class_catch_1_1_binary_expr.html  class_catch_1_1_exception_translator_registrar-members.html  class_catch_1_1_expr_lhs-members.html  class_catch_1_1_expr_lhs.html  class_catch_1_1_generator_exception.html  class_catch_1_1_generators_1_1_fixed_values_generator-members.html  class_catch_1_1_generators_1_1_fixed_values_generator.html  class_catch_1_1_generators_1_1_generator_untyped_base.html  class_catch_1_1_generators_1_1_generator_wrapper-members.html  class_catch_1_1_generators_1_1_generators-members.html  class_catch_1_1_generators_1_1_iterator_generator.html  class_catch_1_1_generators_1_1_range_generator.html  class_catch_1_1_generators_1_1_repeat_generator-members.html  class_catch_1_1_generators_1_1_repeat_generator.html  class_catch_1_1_lazy_expression-members.html  class_catch_1_1_match_expr-members.html  class_mult.html  (+76 more)
6015/msdscript2/testscripts/: hw7report.txt
(+676 files in other folders)
